Redo of decision tree :)

--- a/wineDecisionTreeModel.ipynb
+++ b/wineDecisionTreeModel.ipynb
@@ -1329,7 +1329,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Based on these observations, the best model appears to be the one including the `Proline`, `Flavanoids`, and `Color intenisty` attributes, with a max depth of 4. So, let's train this model using the full training set."
+    "# Conclusion\n",
+    "\n",
+    "#### Based on these observations, the best model appears to be the one including the `Proline`, `Flavanoids`, and `Color intenisty` attributes, with a max depth of 4. So, let's train this model using the full training set."
    ]
   },
   {
